<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_offeride"
        android:icon="@drawable/ic_baseline_directions_bike_24"
        android:title="@string/title_offeride" />

    <item
        android:id="@+id/navigation_bookride"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="@string/title_bookride" />

    <item
        android:id="@+id/navigation_offeredride"
        android:icon="@drawable/ic_baseline_accessible_24"
        android:title="@string/title_offeredrides" />

    <item
        android:id="@+id/navigation_bookedride"
        android:icon="@drawable/ic_baseline_book_24"
        android:title="@string/title_bookedrides" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/title_profile" />

</menu>